Update CodeQL workflow to include JavaScript
Specify JavaScript as the language for CodeQL analysis.

--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -1,7 +1,7 @@
 name: "Code Scanning - Action"
 
 on:
-  pull_request:
+  pull_request: 
     branches: [main]
 
 jobs:
@@ -20,6 +20,9 @@ jobs:
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
+        with:
+          languages: javascript
+          config-file: ./.github/codeql/codeql-config.yml
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
